0-yaml-files/4-namespaces.yml
apiVersion: v1
kind: Namespace
metadata: 
  name: prod


---
apiVersion: v1
kind: Namespace
metadata:
  name: prod
  labels:
    app: namespace-prod
    env: prod
