0-yaml-files/4.1-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: prod
