0-yaml-files/5-deployment_!.yml
# v2 deploy
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydeploy-httpd
  labels:
    app: deployment
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: httpd
  template:
    metadata:
      labels:
        app: httpd
        tier: web
    spec:
      containers:
        - name: httpd-cont
          imagePullPolicy: IfNotPresent
          image: httpd
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 30
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"







# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: nginx-deployment
# spec:
#   replicas: 4
#   selector:
#     matchLabels:
#       app: nginx
#   template:
#     metadata:
#       labels:
#         app: nginx
#     spec:
#       nodeSelector:          # <-- PLACE IT HERE
#         node: node1
#       containers:
#         - name: nginx
#           image: harshithreddy6322/node-app-docker:alpine-health_check
#           ports:
#             - containerPort: 80
