0-yaml-files/8-DeamonSets.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: myds
spec:
  selector:
    matchLabels:
      app: monitor
  template:
    metadata:
      labels:
        app: monitor
    spec:
      containers:
      - name: cont-1
        image: fluentd:latest
        ports:
        - containerPort: 80
